src/objects/Story__c.object
<CustomObject>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dev_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dev Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOE__c</fullName>
        <label>LOE</label>
        <summarizedField>Task__c.LOE__c</summarizedField>
        <summaryForeignKey>Task__c.Story__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <formula>CASE(Status__c  , 
&quot;&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGx0&quot;,&quot;Red&quot;,16,16), 
&quot;Backlog&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGx0&quot;,&quot;Red&quot;,16,16), 
&quot;Blocked&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGx0&quot;,&quot;Red&quot;,16,16), 
&quot;Planned&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGx2&quot;,&quot;Amber&quot;,16,16), 
&quot;In Progress&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGws&quot;,&quot;Green&quot;,16,16), 
&quot;Dev Complete&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGws&quot;,&quot;Green&quot;,16,16), 
&quot;Ready for QA&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGws&quot;,&quot;Green&quot;,16,16), 
&quot;Complete&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001JGws&quot;,&quot;Green&quot;,16,16),&quot;&quot;)</formula>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Name__c</fullName>
        <label>Story Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Count__c</fullName>
        <label>Task Count</label>
        <summaryForeignKey>Task__c.Story__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tasks_Completed__c</fullName>
        <label>Tasks Completed</label>
        <summaryFilterItems>
            <field>Task__c.Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>Task__c.Story__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tasks_In_Progress__c</fullName>
        <label>Tasks In Progress</label>
        <summaryFilterItems>
            <field>Task__c.Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </summaryFilterItems>
        <summaryForeignKey>Task__c.Story__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tasks_Planned__c</fullName>
        <label>Tasks Planned</label>
        <summaryFilterItems>
            <field>Task__c.Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </summaryFilterItems>
        <summaryForeignKey>Task__c.Story__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Story_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Story Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>